--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GpsApplication.MainPage"
              xmlns:maps="http://schemas.microsoft.com/dotnet/2021/maui/maps"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              Title="Mapa">
     <AbsoluteLayout>
         <maps:Map x:Name="MainMap"
@@ -42,8 +43,15 @@
                      BackgroundColor="#CCFFFFFF"
                      WidthRequest="45" x:Name="LocateMeButton"/>
 
+        <ImageButton Source="flag.png"
+             AbsoluteLayout.LayoutFlags="PositionProportional"
+             AbsoluteLayout.LayoutBounds="0.56, 0.02, 40, 45" 
+             BackgroundColor="#CCFFFFFF"
+             WidthRequest="45"
+                     Clicked="LoadRoute"/>
 
-          <!-- Okno wyszukiwania połączenia trasy -->
+
+        <!-- Okno wyszukiwania połączenia trasy -->
         <StackLayout WidthRequest="360" HeightRequest="200" BackgroundColor="White" x:Name="SearchBar" IsVisible="False">
             <Grid RowDefinitions=".99*,.20*,.99*,.20*,.99*" ColumnDefinitions=".50*,.30*,.10*">
                 <Frame Grid.Row="0" Grid.Column="0" Padding="2" BorderColor="Gray" Margin="10,0,0,0"/>
@@ -85,8 +93,13 @@
                 <Label Grid.Row="1" Grid.Column="0" Text="" x:Name="DistanceTrip" FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
                 <Label Grid.Row="1" Grid.Column="1" Text="" x:Name="TimeTrip" FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
                 
-                <Button Grid.Row="2" Grid.Column="0" Text="Rozpocznij" BackgroundColor="#0F950B" CornerRadius="20" Margin="5,2,5,2"/>
-                <Button Grid.Row="2" Grid.Column="1" Text="Anuluj" BackgroundColor="#C61919" CornerRadius="20" Margin="5,2,5,2" Clicked="CloseResultPopup"/>
+                <Button Grid.Row="2" Grid.Column="0" Text="Rozpocznij" BackgroundColor="#0F950B" FontSize="16"
+                        FontAttributes="Bold" CornerRadius="20" Margin="5,2,5,2" HorizontalOptions="Start" MinimumWidthRequest="120" x:Name="AcceptButtonResult"/>
+                <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Text="Zapisz" HorizontalOptions="Center" CornerRadius="20"
+                        FontSize="16" FontAttributes="Bold" Clicked="SaveRoute" x:Name="SaveButtonResult"/>
+                <Button Grid.Row="2" Grid.Column="1" Text="Anuluj" BackgroundColor="#C61919" FontSize="16" x:Name="CancelButtonResult"
+                        FontAttributes="Bold" CornerRadius="20" Margin="5,2,5,2" Clicked="CloseResultPopup" HorizontalOptions="End" MinimumWidthRequest="120"/>
+                
             </Grid>
         </StackLayout>
     </AbsoluteLayout>
