--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -54,7 +54,7 @@
                      AbsoluteLayout.LayoutFlags="PositionProportional"
                      AbsoluteLayout.LayoutBounds="0.01, 0.75, 70, 45" 
                      BackgroundColor="#CCFFFFFF" WidthRequest="45" Clicked="CloseLoadedLines" x:Name="FlagClosing" IsVisible="False"/>
-        <!-- Testowanie nowego okna-->
+        <!-- Trasy z bazy danych -->
         <StackLayout WidthRequest="360" HeightRequest="235" BackgroundColor="White" x:Name="SearchBar" IsVisible="False">
             <Grid ColumnDefinitions=".50*,.50*" Margin="0,0,0,10">
                 <Label Grid.Column="0" Text="Cel" FontSize="18" HorizontalOptions="Center" FontAttributes="Bold"/>
@@ -64,9 +64,9 @@
                 <CollectionView x:Name="RoutesFromDB" HeightRequest="200">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid Padding="15" RowDefinitions=".09*" ColumnDefinitions=".30*,.30*,.20*,.20*" HorizontalOptions="FillAndExpand">
-                                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Name}" HorizontalOptions="Center" FontSize="15" VerticalOptions="Center" x:Name="TestLabel"/>
-                                <ImageButton Source="playbutton.png" Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" Clicked="SearchRouteFromDB" CommandParameter="{Binding .}"/>
+                            <Grid Padding="15" RowDefinitions=".09*" ColumnDefinitions=".50*,.50*" HorizontalOptions="FillAndExpand">
+                                <Label  Grid.Column="0" Text="{Binding Name}" HorizontalOptions="Center" FontSize="15" VerticalOptions="Center" x:Name="TestLabel"/>
+                                <ImageButton Grid.Column="1" Source="playbutton.png" HorizontalOptions="Center" Clicked="SearchRouteFromDB" CommandParameter="{Binding .}"/>
                             </Grid>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
