--- a/QuizPage.xaml
+++ b/QuizPage.xaml
@@ -3,10 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GpsApplication.QuizPage"
              Title="Quiz">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout>
+        <Grid RowDefinitions="*,*,*,*,*,*" ColumnDefinitions=".10*,.90*">
+            <!-- Pytanie -->
+            <Label Grid.Row="0" Grid.ColumnSpan="2" x:Name="QuestionLabel" FontSize="22" FontAttributes="Bold"
+                   HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand" Margin="0,0,0,15"/>
+            <!-- Opcja1 -->
+            <CheckBox Grid.Row="1" Grid.Column="0" x:Name="CheckBox1" Margin="10,0,0,15" CheckedChanged="CheckBoxChanged"/>
+            <Label Grid.Row="1" Grid.Column="1" x:Name="CheckBoxOption1" FontSize="20"
+                   HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HorizontalTextAlignment="Center" Margin="0,0,0,15"/>
+            <!-- Opcja2 -->
+            <CheckBox Grid.Row="2" Grid.Column="0" x:Name="CheckBox2" Margin="10,0,0,15" CheckedChanged="CheckBoxChanged"/>
+            <Label Grid.Row="2" Grid.Column="1" x:Name="CheckBoxOption2" FontSize="20"
+                   HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HorizontalTextAlignment="Center" Margin="0,0,0,15"/>
+            <!-- Opcja3 -->
+            <CheckBox Grid.Row="3" Grid.Column="0" x:Name="CheckBox3" Margin="10,0,0,15" CheckedChanged="CheckBoxChanged"/>
+            <Label Grid.Row="3" Grid.Column="1" x:Name="CheckBoxOption3" FontSize="20"
+                   HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HorizontalTextAlignment="Center" Margin="0,0,0,15"/>
+            <!-- Opcja4 -->
+            <CheckBox Grid.Row="4" Grid.Column="0" x:Name="CheckBox4" Margin="10,0,0,15" CheckedChanged="CheckBoxChanged"/>
+            <Label Grid.Row="4" Grid.Column="1" x:Name="CheckBoxOption4" FontSize="20"
+                   HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HorizontalTextAlignment="Center" Margin="0,0,0,15"/>
+            <!-- Przycisk zatwierdź -->
+            <Button Grid.Row="5" Grid.ColumnSpan="2" x:Name="CheckBoxButton" CornerRadius="20" Text="Dalej" HorizontalOptions="CenterAndExpand"
+                    MinimumWidthRequest="240" FontSize="16" FontAttributes="Bold" IsEnabled="False" Clicked="ConfirmButton"/>
+        </Grid>
+    </StackLayout>
 </ContentPage>
